# LLaVAOV2.0-Caption2VQA_V2

./: .gitignore  =0.3.17  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: hf-captions-sync.mdc
configs/: benchmark_similarity.yaml  caption_to_vqa.yaml  clean_mm_qa.yaml
pipeline/: __init__.py  types.py
pipeline/core/: __init__.py  config.py  dispatcher.py  main.py  routing.py  sink.py  worker.py
pipeline/providers/: __init__.py  azure_openai.py  base.py  openai_compatible.py  registry.py
pipeline/tasks/: __init__.py  base.py
runtime/: endpoints.local.json
scripts/api/: setup_multi_port_forward.sh  start_api_server.sh  start_api_server_multi.sh  stop_multi_port_forward.sh
scripts/data/: check_hf_openbee_uploaded.py  check_openbee_complete_on_hf.py  classify_openbee_domains.py  compare_openbee_uploaded.py  hf_dataset_sync.py  mmmu_keyword_bank.json  monitor_openbee_upload.sh  score_openbee_mmmu_math.py  upload_openbee_images_to_hf.sh  upload_openbee_to_hf.sh
scripts/env/: endpoints.json  local.env.example  vllm_model.env
scripts/tasks/: bench_clean_concurrency.sh  bench_clean_three_runs.sh  bench_raw_throughput.py  deploy_and_clean_v2.sh  deploy_and_clean_v2_full.sh  deploy_and_clean_v3_stop10.sh  rejudge_necessity_only.py  run_caption_to_vqa.sh  (+6 more)
tests/: conftest.py  test_benchmark_similarity_task.py  test_caption_task.py  test_clean_task.py  test_config.py  test_dispatcher.py  test_endpoint_registry.py  test_providers.py  test_resume_e2e.py  test_routing.py  test_sft_videomme_filter.py  test_sink.py  test_videomme_selector.py  test_worker.py
(+31 files in other folders)
